--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,19 +57,19 @@
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bottom_nav"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            app:menu="@menu/bottom_menu">
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/bottom_nav"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:background="@color/white"-->
+<!--            app:menu="@menu/bottom_menu">-->
 
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+<!--        </com.google.android.material.bottomnavigation.BottomNavigationView>-->
 
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
