--- a/app/src/main/res/layout/activity_registration3.xml
+++ b/app/src/main/res/layout/activity_registration3.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
+    android:orientation="vertical"
     android:padding="20dp"
     tools:context=".Registration3Activity">
 
@@ -14,113 +14,113 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/logo_picture"
-        android:layout_width="81dp"
-        android:layout_height="108dp"
-        android:paddingBottom="10dp"
-        android:transitionName="logo_image"
-        android:src="@drawable/shelves" />
+        <ImageView
+            android:id="@+id/logo_picture"
+            android:layout_width="81dp"
+            android:layout_height="108dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/shelves"
+            android:transitionName="logo_image" />
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_backpack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:background="#1f1f1d"
-        android:text="Backpacks"
-        android:textColor="#fff" />
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="Register as a Store Owner"/>
+        android:text="Register as a Store Owner"
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:hint="Username">
+            android:hint="Shop Name"
+            android:paddingBottom="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Namefield"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/Namefield" />
+                android:layout_height="wrap_content" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Email">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/input_email" />
+            android:hint="Email"
+            android:paddingBottom="20dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="Password"
-        android:paddingBottom="20dp"
-        app:passwordToggleEnabled="true">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:id="@+id/input_password"/>
+            android:hint="Password"
+            android:paddingBottom="20dp"
+            app:passwordToggleEnabled="true">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <Button
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
             android:background="#1f1f1d"
-            android:textColor="#fff"
-            />
+            android:text="Register"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/AccountExists"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="20dp"
+            android:text="Login Instead"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+
     </LinearLayout>
 
+
     <TextView
+        android:id="@+id/btn_backpack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/AccountExists"
-        android:textSize="15sp"
-        android:layout_gravity="center"
-        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
         android:paddingTop="40dp"
-        android:text="Sign In Hapa" />
-
+        android:text="Switch To Backpacks"
+        android:textColor="#1f1f1d" />
 
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
 
