--- a/app/src/main/res/layout/activity_store_location.xml
+++ b/app/src/main/res/layout/activity_store_location.xml
@@ -15,16 +15,16 @@
         <ProgressBar
             android:id="@+id/loadingAddLoc"
             style="?android:attr/progressBarStyleHorizontal"
-            android:indeterminate="true"
-            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="gone" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgStart"
@@ -37,51 +37,51 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginStart="22dp"
                 android:layout_marginEnd="35dp"
-                android:layout_gravity="center_horizontal"
-                android:paddingTop="16dp"
-                android:paddingStart="16dp"
                 android:background="#0000"
                 android:drawablePadding="20dp"
+                android:paddingStart="16dp"
+                android:paddingTop="16dp"
                 android:text="Store's Setup"
                 android:textSize="32sp" />
 
-            </LinearLayout>
+        </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginEnd="80dp"
-            android:layout_gravity="center"
-            android:background="#0000"
-            android:drawablePadding="16dp"
-            android:text="Welcome"
-            android:textSize="26sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="80dp"
+                android:layout_marginEnd="80dp"
+                android:background="#0000"
+                android:drawablePadding="16dp"
+                android:text="Welcome"
+                android:textSize="26sp" />
 
 
-        <TextView
-            android:id="@+id/txtEmailID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginEnd="80dp"
-            android:padding="16dp"
-            android:layout_gravity="center"
-            android:background="#0000"
-            android:drawableStart="@drawable/ic_person"
-            android:drawablePadding="20dp"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txtEmailID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="80dp"
+                android:layout_marginEnd="80dp"
+                android:background="#0000"
+                android:drawableStart="@drawable/ic_person"
+                android:drawablePadding="20dp"
+                android:padding="16dp"
+                android:textSize="16sp" />
 
 
-    </LinearLayout>
+        </LinearLayout>
 
 
         <TextView
@@ -89,32 +89,36 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="35dp"
-            android:padding="16dp"
             android:background="#0000"
             android:drawablePadding="20dp"
+            android:padding="16dp"
             android:text="Add Image"
             android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/imgAddVenue"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_add_a_photo_black"/>
+        <ImageView
+            android:id="@+id/imgAddVenue"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_add_a_photo_black"
 
-            <TextView
-                android:id="@+id/txtSearchLoc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="22dp"
-                android:layout_marginEnd="35dp"
-                android:padding="16dp"
-                android:background="#0000"
-                android:drawableStart="@drawable/ic_search"
-                android:drawablePadding="20dp"
-                android:text="Search Store's Location"
-                android:textSize="16sp" />
+            />
+
+        <TextView
+            android:id="@+id/txtSearchLoc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
+            android:layout_marginEnd="35dp"
+            android:background="#0000"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="20dp"
+            android:padding="16dp"
+            android:text="Search Store's Location"
+            android:textSize="16sp" />
 
 
         <View
@@ -128,12 +132,12 @@
             android:id="@+id/edtFarmDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
             android:background="#0000"
             android:hint="Store's Description"
             android:inputType="textCapSentences"
+            android:padding="16dp"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
@@ -148,12 +152,12 @@
             android:id="@+id/edtPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
             android:background="#0000"
             android:hint="Hourly Rate"
             android:inputType="number"
+            android:padding="16dp"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
@@ -168,12 +172,12 @@
             android:id="@+id/edtPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_marginStart="22dp"
             android:layout_marginEnd="22dp"
             android:background="#0000"
             android:hint="Your Contact Number"
             android:inputType="number"
+            android:padding="16dp"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
