--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -22,7 +22,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="25sp"
-      android:text="Sign In Here"/>
+      android:text="Login as a Backpack Owner "/>
 
 
   <LinearLayout
@@ -63,18 +63,19 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/forgot_password"
-        android:textSize="15sp"
-        android:text="Forgot Password?"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/forgot_password"-->
+<!--        android:textSize="15sp"-->
+<!--        android:text="Forgot Password?"/>-->
 
 
     <Button
         android:id="@+id/signinbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:text="@string/sign_in"
         android:background="#1f1f1d"
         android:textColor="#fff"
@@ -89,6 +90,14 @@
       android:textAlignment="center"
       android:layout_gravity="center"
       android:text="Create Account"/>
+
+  <ProgressBar
+      android:id="@+id/progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="120dp"
+      android:visibility="invisible" />
 
 
 
