--- a/app/src/main/res/layout/activity_store_profile.xml
+++ b/app/src/main/res/layout/activity_store_profile.xml
@@ -112,8 +112,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Contact Info"
-                android:paddingLeft="20dp">
+                android:hint="Contact Info">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/tvValue"
@@ -134,14 +133,19 @@
 <!--                android:textColor="#fff" />-->
         </LinearLayout>
 
-<!--        <Button-->
-<!--            android:id="@+id/request_button"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:background="#1f1f1d"-->
-<!--            android:text="Request"-->
-<!--            android:textColor="#fff" />-->
-
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="40dp"
+            android:background="#1f1f1d"
+            android:text="Update Profile"
+            android:textColor="#fff"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
