--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,13 +49,28 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:elevation="4dp"/>
 
-    <fragment
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment">
+        android:orientation="vertical">
 
-    </fragment>
+
+      <fragment
+          android:layout_width="match_parent"
+          android:layout_height="450dp"
+          android:id="@+id/map"
+          android:name="com.google.android.gms.maps.SupportMapFragment">
+
+      </fragment>
+
+      <ListView
+          android:id="@+id/listPlaces"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+      </ListView>
+    </LinearLayout>
+
 
 
   </androidx.appcompat.widget.LinearLayoutCompat>
