--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.Main" parent="Theme.AppCompat.NoActionBar">
+
+    </style>
+
 </resources>
