--- a/app/src/main/res/layout/activity_driver_map.xml
+++ b/app/src/main/res/layout/activity_driver_map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -54,6 +55,31 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+               <Button
+                   android:id="@+id/btnRestaurant"
+                   android:layout_width="120dp"
+                   android:layout_height="wrap_content"
+                   android:text="Nearby Restaurants" />
+
+               <Button
+                   android:id="@+id/btnHospital"
+                   android:layout_width="120dp"
+                   android:layout_height="wrap_content"
+                   android:text="Nearby Hospitals" />
+
+               <Button
+                   android:id="@+id/btnSchool"
+                   android:layout_width="120dp"
+                   android:layout_height="wrap_content"
+                   android:text="Nearby Schools" />
+
+           </LinearLayout>
+
 
             <fragment
                 android:id="@+id/map"
@@ -62,6 +88,8 @@
                 android:layout_height="420dp">
 
             </fragment>
+
+
 
 
             <TextView
