Onboard activity and Message Service

--- a/app/src/main/res/layout/activity_all_request_back_pack.xml
+++ b/app/src/main/res/layout/activity_all_request_back_pack.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff"
-    tools:context=".AllRequestBackPackActivity">
+    tools:context=".Backpack.AllRequestBackPackActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
