--- a/app/src/main/res/layout/activity_store_profile.xml
+++ b/app/src/main/res/layout/activity_store_profile.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".StoreProfileActivity">
+    tools:context=".Store.StoreProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
