--- a/app/src/main/res/layout/activity_all_requests.xml
+++ b/app/src/main/res/layout/activity_all_requests.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff"
-    tools:context=".AllRequestsActivity">
+    tools:context=".Store.AllRequestsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
