--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -4,5 +4,5 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:id="@+id/map"
-tools:context=".DemoActivity"
+tools:context=".Directions.DemoActivity"
 android:name="com.google.android.gms.maps.SupportMapFragment" />
