--- a/app/src/main/res/layout/activity_driver_map.xml
+++ b/app/src/main/res/layout/activity_driver_map.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".DriverMapActivity">
+    tools:context=".Store.DriverMapActivity">
 
 
     <com.google.android.material.navigation.NavigationView
