--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".MapsActivity">
+    tools:context=".Backpack.MapsActivity">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
