--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@android:color/white"
     android:padding="20dp"
-    tools:context=".RegistrationActivity">
+    tools:context=".Backpack.RegistrationActivity">
 
   <ImageView
       android:id="@+id/logo_picture"
