--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".RequestActivity">
+    tools:context=".Backpack.RequestActivity">
 
     <ProgressBar
         android:id="@+id/loadingAddLoc"
