--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/white"
     android:padding="20dp"
     android:orientation="vertical"
-    tools:context=".SignInActivity">
+    tools:context=".Backpack.SignInActivity">
 
   <ImageView
       android:id="@+id/logo_picture"
@@ -63,23 +63,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/forgot_password"-->
-<!--        android:textSize="15sp"-->
-<!--        android:text="Forgot Password?"/>-->
-
 
     <Button
         android:id="@+id/signinbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#1f1f1d"
         android:padding="20dp"
         android:text="@string/sign_in"
-        android:background="#1f1f1d"
-        android:textColor="#fff"
-        />
+        android:textColor="#fff" />
   </LinearLayout>
 
   <TextView
@@ -90,6 +82,16 @@
       android:textAlignment="center"
       android:layout_gravity="center"
       android:text="Create Account"/>
+
+  <TextView
+      android:id="@+id/forgot_password"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Forgot Password?"
+      android:textAlignment="center"
+      android:layout_gravity="center"
+      android:paddingTop="20dp"
+      android:textSize="15sp" />
 
   <ProgressBar
       android:id="@+id/progressBar"
