--- a/app/src/main/res/layout/activity_store_profile_backpack.xml
+++ b/app/src/main/res/layout/activity_store_profile_backpack.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/white"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".StoreProfileBackpackActivity">
+    tools:context=".Backpack.StoreProfileBackpackActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
