--- a/app/src/main/res/layout/activity_stores_login.xml
+++ b/app/src/main/res/layout/activity_stores_login.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@android:color/white"
     android:padding="20dp"
-    tools:context=".StoresLoginActivity">
+    tools:context=".Store.StoresLoginActivity">
   <ImageView
       android:id="@+id/logo_picture"
       android:layout_width="81dp"
